--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,64 @@
+.input1{
+    margin-top: 50px;
+    margin-right: 100px;
+    margin-left: 100px;
+    height: 20px;
+    border-color: white !important;
+    box-shadow: none;
+    height: 30px;
+    border-radius: 10px;
+    width: 50%;
+}
+.input2{
+  margin-top: 30px;
+  margin-right: 100px;
+  margin-left: 100px;
+  height: 20px;
+  border-color: white !important;
+  box-shadow: none;
+  height: 30px;
+  border-radius: 10px;
+  width: 50%;
+}
+.input3{
+  margin-top: 10px;
+  margin-right: 100px;
+  margin-left: 100px;
+  height: 20px;
+  border-color: white !important;
+  box-shadow: none;
+  height: 30px;
+  border-radius: 10px;
+  width: 50%;
+}
+.card-app{
+  width: 450px;
+    height: 251px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 20px;
+    box-shadow: 0px 0px 7px 0px;
+    margin-top: 0px;
+}
+.div1{
+  margin-left: 54px;
+    margin-top: 50px;
+}
+.div2{
+  margin-left: 54px;
+    margin-top: 20px;
+}
+.button1{
+  width: 120px;
+    border-radius: 20px;
+    background-color: black;
+    border-color: transparent;
+    margin-right: 40px;
+}
+.text1{
+  color: white;
+  font-size: 14px;
+}
 .App {
   text-align: center;
 }
@@ -14,16 +75,16 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  background-color: grey;
+ 
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
 }
 
+
+span {
+  display: inline-block;
+}
 .App-link {
   color: #61dafb;
 }
@@ -35,4 +96,25 @@
   to {
     transform: rotate(360deg);
   }
+}
+body {
+  background-color: grey;
+  color: #fff;
+  font-weight: 400;
+  font-size: 2vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: "Khula", sans-serif;
+  height: 100vh;
+  box-sizing: border-box;
+  letter-spacing: 6px;
+  margin: 0;
+  line-height: 1.2;
+}
+
+span {
+  display: inline-block;
 }
